Fix .dropdown-menu height and add y-overflow

--- a/css/uchiwa-dark/uchiwa-dark.css
+++ b/css/uchiwa-dark/uchiwa-dark.css
@@ -534,7 +534,9 @@ pre.hljs .hljs-string {
   background-color: #2C2C39;
   color: #FFFFFF;
   margin-top: 10px;
-  min-width: 200px; }
+  min-width: 200px;
+  max-height: 600px;
+  overflow-y: auto; }
 
 .dropdown-menu-item {
   padding: 8px 0 8px 8px;
