--- a/css/uchiwa-default/uchiwa-default.css
+++ b/css/uchiwa-default/uchiwa-default.css
@@ -518,7 +518,9 @@ pre.hljs .hljs-string {
   background-color: #FFFFFF;
   color: #4D4D4D;
   margin-top: 10px;
-  min-width: 200px; }
+  min-width: 200px;
+  max-height: 600px;
+  overflow-y: auto; }
 
 .dropdown-menu-item {
   padding: 8px 0 8px 8px;
